fancy error pages

--- a/public/404.html
+++ b/public/404.html
@@ -3,53 +3,80 @@
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png" />
   <style>
+  .dialog {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+    background-color: #fff;
+    color: #860CE6;
     text-align: center;
-    font-family: arial, sans-serif;
+    font-size: 30px;
+    font-family: "Shadows Into Light Two", sans-serif;
     margin: 0;
   }
 
   .rails-default-error-page div.dialog {
     width: 95%;
     max-width: 33em;
-    margin: 4em auto 0;
+    margin: 1em auto 0;
   }
 
   .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
     padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    margin-bottom: 0;
   }
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #860CE6;
     line-height: 1.5em;
+    margin-top: 40px;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .rails-default-error-page p {
     margin: 0 0 1em;
     padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    font-size: 20px;
+    color: #000;
+    font-family: "Open Sans", sans-serif;
+  }
+
+  .error-logo {
+    margin-bottom: 20px;
+  }
+
+  .sm {
+    width: 60px;
+    height: 60px;
+  }
+
+  .lg {
+    width: 250px;
+    height: 250px;
+  }
+
+  .btn-pimp-2 {
+    background-image: url("/images/btn.svg");
+    background-size: 100% 100%;
+    border: none;
+    border-radius: 0px;
+    box-shadow: none;
+    background-clip: padding-box;
+    outline: 0;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 10px;
+    color: white;
+    margin: 30px 60px;
+  }
+
+  .redirect a {
+    text-decoration: none;
   }
   </style>
 </head>
@@ -57,11 +84,20 @@
 <body class="rails-default-error-page">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
+    <div class="error-logo lg">
+      <img src="/images/logo-big.svg" alt="Logo Mind the Map">
+    </div>
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="error-logo sm">
+      <img src="/images/look.svg" alt="Logo Mind the Map">
+    </div>
+    <div class="redirect">
+      <p>If you are the application owner check the logs for more information.</p>
+      <a href="http://www.mindthemapgame.com/"><div class="btn-pimp-2">Back to homepage</div></a>
+    </div>
   </div>
 </body>
 </html>
